<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_icon"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:openDrawer="end">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/chapter_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bannerAdsLayout"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN01"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/apnare_ami_khujiya_berai"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN02"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/je_sutai_badha_jibon"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN03"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/gahi_notuner_gan"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN04"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/potoner_ayaj_paoya_jay"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN05"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/bisshojora_patsala_more"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN06"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/kokhono_vul_hole"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN07"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/bondishibir_theke"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN08"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/jodi_tor_dak_sune_keo_na_ase"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN09"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/je_jai_boluk_piche"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN10"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/khule_jak_jiboner_bondho_duyar"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN11"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/khelaghor_pata_ase_ai_akhane"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN12"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/ridoyer_janala_khule_dao_na"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN13"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/jiboner_kompass"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN14"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/valobasi_valobasi"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN15"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/sumudher_sad"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="10dp"
                        card_view:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/SN16"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_right"
                            android:gravity="start|center_vertical"
                            android:text="@string/abar_vinno_kichu_hok"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bannerAdsLayout"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black_text"
            android:visibility="gone">

            <!--    Ads View    -->
            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="LARGE_BANNER"
                ads:adUnitId="@string/home_page_banner_ads_id" />
        </LinearLayout>

    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        app:headerLayout="@layout/nav_head"
        app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>